--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,21 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" type="text/css" />
+
 <h1>Eat Da Burger</h1>
 
 <h2>Burgers</h2>
+<style>
 
+
+
+body{background-color: yellow};
+h1{text-align: center;
+font-size: 100px !important}
+
+#addburger{background-color: green}
+
+
+
+</style>
 <ul>
   {{#each burgers}}
   {{!--this is a for loop itterating through the burgers object--}}
@@ -23,6 +37,8 @@
 </ul>
 
 <h2>Add a Burger</h2>
+<img src="/../burger.png" alt="Sorry I ate it!" height="42" width="42">
+
 <form class="create-form">
 
   <div class="form-group">
@@ -36,5 +52,5 @@
     <input type="radio" name="devoured" value="0"> not devoured
   </div>
 
-  <button type="submit">Add Burger</button>
+  <button type="submit" class="btn btn-success" id="addburger">Add a burger</button>
 </form>
