--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<title>Burger</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="js/burger.js"></script>
+		<script src="../../js/burger.js"></script>
 
 	</head>
 	<body>
